--- a/05-quotations/05-quotation/quotation.html
+++ b/05-quotations/05-quotation/quotation.html
@@ -249,7 +249,7 @@
                                 subTotal = subTotal + (e.unitPrice * e.quantity)
                             })
                             var vat = (subTotal * .07).toFixed(2)
-                            var total = subTotal * 1.07.toFixed(2)
+                            var total = (subTotal * 1.07).toFixed(2)
                             
                             console.log('subTotal', subTotal)
                             
